Rework DefoldSdkService to deal with concurrent download/acquiring sdk for building.